--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">QuizkR</a>
+    <a routerLink="home" class="navbar-brand">QuizkR</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
         <a routerLink="login" class="nav-link">Login</a>
