--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,6 +4,18 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://unicons.iconscout.com/release/v2.1.9/css/unicons.css'>
 </head>
+<header class="p-1 text-bg-dark">
+    <div class="container-fluid">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <h1>QuizkR</h1>
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="" class="nav-link px-1 text-secondary">Home</a></li><br>
+          <li><a href="#" class="nav-link px-1 text-white">Pricing</a></li><br>
+          <li><a href="#" class="nav-link px-1 text-white">About</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
 <body>
 <div class="section">
 		<div class="container">
