--- a/src/app/components/quiz/quiz.component.css
+++ b/src/app/components/quiz/quiz.component.css
@@ -3,7 +3,9 @@
     margin: 0 auto;
     padding: 10px;
 }
-
+header{
+    height: 100px;
+}
 li {
     list-style-type: none;
     cursor: pointer;
