--- a/src/app/components/aiquiz/aiquiz.component.html
+++ b/src/app/components/aiquiz/aiquiz.component.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-</head>
-<header class="p-1 text-bg-dark">
-	<div class="container-fluid">
-	  <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-		<h1>QuizkR</h1>
-		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-		  <li><a href="" class="nav-link px-1 text-secondary">Home</a></li><br>
-		  <li><a href="#" class="nav-link px-1 text-white">Pricing</a></li><br>
-		  <li><a href="#" class="nav-link px-1 text-white">About</a></li>
+<header>
+	  <h3 class="logo" routerLink="">QUIZKR</h3>
+	<nav>
+		<ul class="nav_links">
+			<li><a href="http://localhost:4200/sgquiz">Generate Quiz</a></li>
 		</ul>
-		<a routerLink="register" class="nav-link px-1 text-white" style="padding-right: 25px;">SignIn/Up</a>
-		<a (click)="this.logout()" class="nav-link px-1 text-white">LogOut</a>
-	  </div>
-	</div>
+	</nav>
+	<a routerLink="register" *ngIf="!this.isLogged" class="cta" ><button class="cta1" (click)="this.nav()">LOGIN</button></a>
+	<a class="cta" *ngIf="this.isLogged" ><button class="cta1" (click)="this.logout()">Logout</button></a>
 </header>
 <body>
-<fieldset class="checkbox-group" *ngIf="!this.isLoading">
+<fieldset class="checkbox-group" *ngIf="!this.isLoading && this.isreceived">
 	<legend class="checkbox-group-legend">Select Topics For Quiz Generation</legend>
 	<div class="checkbox">
 		<label class="checkbox-wrapper">
@@ -161,11 +153,22 @@
 			</span>
 		</label>
 	</div>
-	<button style="position: relative;" (click)="this.submit()">Proceed to Quiz</button>
+	<button class="opt-2" style="position: relative;" (click)="this.submit()">Proceed to Quiz</button>
 </fieldset>
-<div *ngIf="this.isLoading">
-	<input type="text" placeholder="Enter Your Name!" [(ngModel)]="this.uName" required/>
-	<button (click)="this.quiz()">Get Your Quiz</button>
+<div *ngIf="this.isLoading && this.isreceived">
+	<span class="loader"></span>
+</div>
+<div class="link-section" *ngIf="this.isLoading && this.load ">
+    <h2>Id Of the Quiz: {{this.link}}</h2>
+    <h4>Paste the link in the link box to attend your quiz!</h4>
+    <div class="link-box">
+      <input type="text" id="quizLink" value="{{this.link}}" readonly>
+      <button (click)="this.copyLink()">Copy Link</button>
+    </div>
+    <!-- <div class="link-box">
+      <input type="text" placeholder="Enter the link here...">
+      <button (click)="this.quiz()">Click Here to Attend the quiz!</button>
+    </div> -->
   </div>
 </body>
 </html>
