--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,17 +1,15 @@
 <head>
   <meta charset="UTF-8">
-  <title>Quizkr</title>
+  <title>QUIZKR</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://unicons.iconscout.com/release/v2.1.9/css/unicons.css'>
 </head>
-<header class="p-1 text-bg-dark">
+<header >
     <div class="container-fluid">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <h1>QuizkR</h1>
+        <h2 routerLink="">QuizkR</h2>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="" class="nav-link px-1 text-secondary">Home</a></li><br>
-          <li><a href="#" class="nav-link px-1 text-white">Pricing</a></li><br>
-          <li><a href="#" class="nav-link px-1 text-white">About</a></li>
+            <li><a href="http://localhost:4200/" class="nav-link px-1 text-secondary">Home</a></li><br>
         </ul>
       </div>
     </div>
