--- a/src/app/components/sgquiz/sgquiz.component.html
+++ b/src/app/components/sgquiz/sgquiz.component.html
@@ -1,38 +1,40 @@
-<header class="p-1 text-bg-dark">
-    <div class="container-fluid">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <h1>QuizkR</h1>
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="" class="nav-link px-1 text-secondary">Home</a></li><br>
-          <li><a href="#" class="nav-link px-1 text-white">Pricing</a></li><br>
-          <li><a href="#" class="nav-link px-1 text-white">About</a></li>
-        </ul>
-        <a routerLink="register" class="nav-link px-1 text-white" style="padding-right: 25px;">SignIn/Up</a>
-        <a (click)="this.logout()" class="nav-link px-1 text-white">LogOut</a>
-      </div>
-    </div>
+<!DOCTYPE html>
+<html lang="en" >
+  <header>
+	  <h3 class="logo" routerLink="">QUIZKR</h3>
+	  <nav>
+      <ul class="nav_links">
+        <li><a href="http://localhost:4200/aiquiz">AI Quiz</a></li>
+      </ul>
+    </nav>
+    <a routerLink="register" *ngIf="!this.isLogged" class="cta" href="#"><button class="cta1" (click)="this.nav()">LOGIN</button></a>
+    <a class="cta" *ngIf="this.isLogged" ><button class="cta1" (click)="this.logout()">Logout</button></a>
   </header>
-<div *ngIf="!this.hide">
-    <mat-card-header>Question</mat-card-header><br>
-    <mat-card-content>
-        <form [formGroup]="myForm" (ngSubmit)="submit()">
-            <input formControlName="question" type="text" placeholder="Enter your Question" required=""/><br><br>
-            <input formControlName="answer1" type="text" placeholder="Enter Option 1" required=""/><br><br>
-            <input formControlName="answer2" type="text" placeholder="Enter Option 2" required=""/><br><br>
-            <input formControlName="answer3" type="text" placeholder="Enter Option 3" required=""/><br><br>
-            <input formControlName="answer4" type="text" placeholder="Enter Option 4" required=""/><br><br>
-            <input formControlName="cAnswer" type="text" placeholder="Enter the Correct Option" required=""/><br><br>
-            <button type="submit">Add Another!</button><br><br>
-        </form>
-    </mat-card-content>
-    <mat-card-actions>
-        <button (click)="this.finished()">Finished!</button>
-    </mat-card-actions>
-</div>
-<div *ngIf="this.hide && this.tolink">
-    <input type="text" placeholder="Enter Your Name!" [(ngModel)]="this.uName" required/>
-    <button (click)="this.quiz()">Get Your Quiz</button>
-</div>
-<div *ngIf="!this.tolink">
-  <h2>Link To Quiz: {{this.link}}</h2>
-</div>
+<body>
+  <div *ngIf="!this.hide">
+    <form [formGroup]="myForm" (ngSubmit)="submit()">
+      <label >Question Goes here  </label>
+      <input formControlName="question" type="text" placeholder="Enter your Question" required="" /><br><br>
+      <label >Option 1  </label>
+      <input formControlName="answer1" type="text" placeholder="Enter Option 1" required="" /><br><br>
+      <label >Option 2  </label>
+      <input formControlName="answer2" type="text" placeholder="Enter Option 2" required="" /><br><br>
+      <label >Option 3  </label>
+      <input formControlName="answer3" type="text" placeholder="Enter Option 3" required="" /><br><br>
+      <label >Option 4  </label>
+      <input formControlName="answer4" type="text" placeholder="Enter Option 4" required="" /><br><br>
+      <label >Correct Answer  </label>
+      <input formControlName="cAnswer" type="text" placeholder="Enter the Correct Option" required="" /><br><br>
+      <button type="submit">Add Another!</button><br><br>
+    </form>
+    <button (click)="this.finished()">Finished!</button>
+  </div>
+  <div class="link-section" *ngIf="this.hide">
+    <h2>Id Of the Quiz: {{this.link}}</h2>
+    <h4>Copy the link in the link box to attend your quiz!</h4>
+    <div class="link-box" style="text-align: justify; padding-left: 130px;">
+      <input type="text" id="quizLink" value="{{this.link}}" readonly>
+      <button (click)="this.copyLink()">Copy Link</button>
+    </div>
+  </div>
+</body>
